# pilots-desk

./: .gitignore  BUILD_INSTRUCTIONS.md  DEPLOYMENT_COMPLETE.md  E2E_TEST_PLAN.md  GITHUB_ACTIONS_SETUP.md  PHASE4.3_COMPLETE.md  PHASE4.5_COMPLETE.md  PHASE4_FINAL_SUMMARY.md  PHASE4_SUMMARY.md  PROGRESS.md  README.md  READY_TO_DEPLOY.md  SA_ACCENT_TESTING.md  SA_TESTING_STATUS.md  SIDECAR_SETUP_COMPLETE.md  TESTING_v0.6.4.md  WHISPER_INTEGRATION_GUIDE.md  WINDOWS_WHISPER_READY.md  package-lock.json  package.json  tailwind.config.js
.github/workflows/: README.md  build-release.yml  build-test.yml  build-windows.yml  build.yml  test-minimal.yml
backend/: .env.example  README.md  requirements.txt
backend/app/: main.py
backend/logs/: README.txt
backend/prompts/: sky_tv_scoring.txt
dashboard/: .env.example  ANALYTICS.md  DEPLOYMENT.md  README.md  index.html  package-lock.json  package.json
dashboard/src/: App.tsx  index.css
docs/: AUDIO_CHANNEL_FIX_v0.6.4.md  DEVELOPMENT.md  WASAPI_TODO.md  WHISPER_SETUP.md  WINDOWS_DEPLOYMENT.md  WINDOWS_TESTING.md
models/: README.md
scripts/: coaching_framework.json  schema.json
scripts/sky_tv_nz/: main_pitch.json  main_pitch_v2.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/sidecars/: whisper-x86_64-unknown-linux-gnu
src-tauri/src/: audio.rs  lib.rs  main.rs  permissions.rs  script.rs  storage.rs  whisper.rs  whisper.rs.old  whisper_mutter.rs  whisper_native.rs
tests/: README.md  backend-api-test.sh  desktop-backend-integration.md
(+65 files in other folders)
